<?xml version="1.0"?>
<!--
 Software License Agreement (BSD License)
 Copyright © 2022-2023 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->
<package>
  <name>sr_robot_launch</name>
  <version>0.0.1</version>
  <description>sr_robot_launch contains the launch file for the UR10 arm and SR hand</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/sr-ros-interface</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-ros-interface/issues</url>

  <author>Kirsty Ellis</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sr_multi_description</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>ur_gazebo</run_depend>
  <run_depend>ros_control_robot</run_depend>
  <run_depend>sr_utilities_common</run_depend>
  <run_depend>sr_hand_detector</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>warehouse_ros</test_depend>
  <test_depend>warehouse_ros_mongo</test_depend>

</package>
