<!--
 Software License Agreement (BSD License)
 Copyright © 2022 belongs to Shadow Robot Company Ltd.
 All rights reserved.
 Redistribution and use in source and binary forms, with or without modification,
 are permitted provided that the following conditions are met:
   1. Redistributions of source code must retain the above copyright notice,
      this list of conditions and the following disclaimer.
   2. Redistributions in binary form must reproduce the above copyright notice,
      this list of conditions and the following disclaimer in the documentation
      and/or other materials provided with the distribution.
   3. Neither the name of Shadow Robot Company Ltd nor the names of its contributors
      may be used to endorse or promote products derived from this software without
      specific prior written permission.
 This software is provided by Shadow Robot Company Ltd "as is" and any express
 or implied warranties, including, but not limited to, the implied warranties of
 merchantability and fitness for a particular purpose are disclaimed. In no event
 shall the copyright holder be liable for any direct, indirect, incidental, special,
 exemplary, or consequential damages (including, but not limited to, procurement of
 substitute goods or services; loss of use, data, or profits; or business interruption)
 however caused and on any theory of liability, whether in contract, strict liability,
 or tort (including negligence or otherwise) arising in any way out of the use of this
 software, even if advised of the possibility of such damage.
-->

<package>
  <name>hand_kinematics</name>
  <version>1.3.0</version>
  <description>Computation of forward and inverse kinematics for the fingers of the Shadow Hand, including coupling.
  </description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/shadow-robot/sr-contrib</url>
  <url type="bugtracker">https://github.com/shadow-robot/sr-contrib/issues</url>

  <author>Juan Antonio Corrales Ramon (UPMC),</author>
  <author>Guillaume Walck (CITEC)</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_coupling</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>python3-pykdl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <!-- comment all he following if you don't want the plugin interface -->
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sr_utilities</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>kdl_coupling</run_depend>
  <run_depend>python3-pykdl</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!-- comment all he following if you don't want the plugin interface -->
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sr_utilities</run_depend>
  <run_depend>sr_utilities_common</run_depend>

  <export>
    <moveit_core plugin="${prefix}/hand_kinematics_plugins.xml"/>
  </export>
</package>
