<package>

  <name>sr_moveit_planner_benchmarking</name>
  <version>0.0.1</version>
  <description>
    A package to test moveit planners with the UR10 arm and Shadow hand.
  </description>
  <author email="kirsty@shadowrobot.com">Kirsty Ellis</author>
  <maintainer email="kirsty@shadowrobot.com">Kirsty Ellis</maintainer>

  <license>BSD</license>

  <build_depend>sr_multi_description</build_depend>
  <build_depend>sr_benchmarking</build_depend>
  <build_depend>python-tabulate</build_depend>

  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>sr_multi_description</run_depend>
  <run_depend>sr_benchmarking</run_depend>
  <run_depend>python-tabulate</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
