<?xml version="1.0"?>
<package>
  <name>sr_remote_warehouse</name>
  <version>0.0.1</version>
  <description>The sr_remote_warehouse package</description>

  <maintainer email="dg@shadworobot.com">Dan Greenwald</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_warehouse</build_depend>
  <build_depend>warehouse_ros</build_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_warehouse</run_depend>
  <run_depend>warehouse_ros</run_depend>

</package>
